--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/bosagora/phone-link-validator.git"
+        "url": "git+https://github.com/acc-coin/phone-link-validator.git"
     },
     "author": "BOSagora Foundation",
     "license": "AGPL-3.0-or-later",
@@ -55,6 +55,7 @@
         "@types/node": "^12.20.43",
         "@types/node-cron": "^3.0.1",
         "@types/urijs": "^1.19.12",
+        "acc-contracts-v2": "~2.1.3",
         "argparse": "^2.0.1",
         "assert": "^2.0.0",
         "axios": "^1.6.7",
@@ -62,7 +63,6 @@
         "chai": "^4.3.7",
         "chai-http": "^4.3.7",
         "cors": "^2.8.5",
-        "dms-contracts-v2": "~2.1.3",
         "dotenv": "^10.0.0",
         "ethereum-waffle": "^4.0.10",
         "ethers": "npm:boa-ethers2@^5.7.9",
