--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
         "url": ""
     },
     "homepage": "",
-    "dependencies": {
+    "devDependencies": {
         "@ethersproject/experimental": "^5.7.0",
         "@nomiclabs/hardhat-ethers": "^2.2.3",
         "@nomiclabs/hardhat-waffle": "^2.0.2",
@@ -54,18 +54,20 @@
         "@types/mocha": "^10.0.0",
         "@types/node": "^12.20.43",
         "@types/node-cron": "^3.0.1",
-        "@types/urijs": "^1.19.12",
+        "@types/urijs": "^1.19.12"
+    },
+    "dependencies": {
         "acc-contracts-v2": "~2.1.3",
         "argparse": "^2.0.1",
         "assert": "^2.0.0",
-        "axios": "^1.6.7",
+        "axios": "^1.6.8",
         "body-parser": "^1.19.0",
         "chai": "^4.3.7",
         "chai-http": "^4.3.7",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "ethereum-waffle": "^4.0.10",
-        "ethers": "npm:boa-ethers2@^5.7.9",
+        "ethers": "^5.7.0",
         "express": "^4.17.1",
         "express-validator": "^6.14.0",
         "extend": "^3.0.2",
@@ -80,7 +82,6 @@
         "prettier-plugin-solidity": "^1.1.1",
         "prom-client": "^15.1.0",
         "secure-env": "^1.2.0",
-        "smart-buffer": "^4.1.0",
         "solhint": "^3.3.6",
         "solidity-coverage": "^0.8.2",
         "solidity-docgen": "^0.6.0-beta.35",
@@ -91,7 +92,6 @@
         "typechain": "^8.1.0",
         "typescript": "^4.5.5",
         "urijs": "^1.19.7",
-        "web3": "^1.7.3",
         "winston": "^3.3.3",
         "yaml-env-defaults": "^1.1.3"
     }
