--- a/package.json
+++ b/package.json
@@ -35,15 +35,6 @@
     },
     "homepage": "",
     "devDependencies": {
-        "@ethersproject/experimental": "^5.7.0",
-        "@nomiclabs/hardhat-ethers": "^2.2.3",
-        "@nomiclabs/hardhat-waffle": "^2.0.2",
-        "@nomiclabs/hardhat-web3": "^2.0.0",
-        "@openzeppelin/contracts": "^4.9.5",
-        "@openzeppelin/contracts-upgradeable": "^4.9.5",
-        "@openzeppelin/hardhat-upgrades": "^1.28.0",
-        "@typechain/ethers-v5": "^10.1.0",
-        "@typechain/hardhat": "^6.1.2",
         "@types/argparse": "^2.0.2",
         "@types/chai": "^4.3.5",
         "@types/cors": "^2.8.8",
@@ -57,6 +48,26 @@
         "@types/urijs": "^1.19.12"
     },
     "dependencies": {
+        "@ethersproject/abi": "^5.7.0",
+        "@ethersproject/abstract-signer": "^5.7.0",
+        "@ethersproject/bignumber": "^5.7.0",
+        "@ethersproject/bytes": "^5.7.0",
+        "@ethersproject/constants": "^5.7.0",
+        "@ethersproject/contracts": "^5.7.0",
+        "@ethersproject/experimental": "^5.7.0",
+        "@ethersproject/hash": "^5.7.0",
+        "@ethersproject/keccak256": "^5.7.0",
+        "@ethersproject/providers": "^5.7.0",
+        "@ethersproject/random": "^5.7.0",
+        "@ethersproject/wallet": "^5.7.0",
+        "@nomiclabs/hardhat-ethers": "^2.2.3",
+        "@nomiclabs/hardhat-waffle": "^2.0.2",
+        "@nomiclabs/hardhat-web3": "^2.0.0",
+        "@openzeppelin/contracts": "^4.9.5",
+        "@openzeppelin/contracts-upgradeable": "^4.9.5",
+        "@openzeppelin/hardhat-upgrades": "^1.28.0",
+        "@typechain/ethers-v5": "^10.1.0",
+        "@typechain/hardhat": "^6.1.2",
         "argparse": "^2.0.1",
         "assert": "^2.0.0",
         "axios": "^1.6.8",
