Change the SMS sending method

--- a/env/.env.sample
+++ b/env/.env.sample
@@ -21,7 +21,7 @@ PHONE_LINK_COLLECTION_ADDRESS=0xaE7018CaF086EB2Ca62eAA7b91B61dDA6b046F70
 
 AUTHENTICATION_MODE=3
 
-SMS_ENDPOINT=http://127.0.0.1:3300/send
+SMS_ENDPOINT=http://127.0.0.1:3300/verification
 SMS_ACCESSKEY=
 SMS_RECEIVER=
 
